--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@ const popups = document.querySelectorAll(
     <div class="responsive-container">
       <button onclick="loadSite('https://elmundo.es')">El Mundo</button>
       <button onclick="loadSite('https://elpais.com')">El País</button>
+      <button onclick="loadSite('https://larazon.es')">El Mundo</button>
+      <button onclick="loadSite('https://elperiodico.es')">El País</button>
     </div>
     <iframe
       id="siteViewer"
