--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@ const popups = document.querySelectorAll(
       <button onclick="loadSite('https://elpais.com')">El País</button>
       <button onclick="loadSite('https://larazon.es')">Larazon</button>
       <button onclick="loadSite('https://elperiodico.es')">El Periodico</button>
+      <button onclick="loadSite('https://eleconomista.es')">
+        El Economista
+      </button>
+      <button onclick="loadSite('https://www.autobild.es')">Autobild</button>
+      <button onclick="loadSite('https://elperiodico.es')">El Periodico</button>
     </div>
     <iframe
       id="siteViewer"
